KTOR-3420 Add integration tests for generating and running projects

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,5 @@ kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
 ktor_version=1.6.4
 kotlinx_cli_version=0.3.3
+kotlin.mpp.enableCInteropCommonization=true
+kotlin.internal.mpp.hierarchicalStructureByDefault=true
