--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,6 @@ kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
 ktor_version=1.6.4
 kotlinx_cli_version=0.3.3
+mordant_version=2.0.0-beta4
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.internal.mpp.hierarchicalStructureByDefault=true
