--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,6 +1,6 @@
-name: ktor # you probably want to 'snapcraft register <name>'
+name: ktor
 summary: Creates porjects with ktor framework setup.
-version: '0.0.1' # just for humans, typically '1.2+git' or '1.3.2'
+version: '2.1.0-eap-1'
 icon: gui/ktorPlugin.svg
 base: core18
 grade: stable
