--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -21,10 +21,12 @@ parts:
       - unzip
       - libcurl4
       - libcurl4-gnutls-dev
+      - openjdk
     stage-packages:
       - git
     override-build: |
       snapcraftctl build
+      JAVA_HOME=${SNAP}/usr/lib/jvm/java-8-openjdk-${SNAP_ARCH}/bin/java
       ./gradlew linkReleaseExecutableLinuxX64
     override-stage: |
       snapcraftctl stage
