--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -24,6 +24,7 @@ parts:
       - unzip
       - libcurl4
       - libcurl4-gnutls-dev
+      - openjdk-11-jre
     stage-packages:
       - git
     override-build: |
