--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -41,6 +41,11 @@ parts:
     override-build: |
       snapcraftctl build
       java -version
+      echo "____0__"
+      pwd
+      echo "____1__"
+      ls
+      ./gradlew wrapper --gradle-distribution-url=gradle-7.3.1-bin.zip
       ./gradlew linkReleaseExecutableLinuxX64
     override-stage: |
       snapcraftctl stage
