--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -45,6 +45,8 @@ parts:
       pwd
       echo "____1__"
       ls
+      echo "____2__"
+      ls gradle/wrapper
       ./gradlew wrapper --gradle-distribution-url=gradle-7.3.1-bin.zip
       ./gradlew linkReleaseExecutableLinuxX64
     override-stage: |
