--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -47,6 +47,7 @@ parts:
       ls
       echo "____2__"
       ls gradle/wrapper
+      cat gradle/wrapper/gradle-wrapper.properties
       ./gradlew wrapper --gradle-distribution-url=gradle-7.3.1-bin.zip
       ./gradlew linkReleaseExecutableLinuxX64
     override-stage: |
