--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -42,12 +42,11 @@ parts:
     override-build: |
       snapcraftctl build
       java -version
-      echo "____0__"
       pwd
-      echo "____1__"
       ls
-      echo "____2__"
       ls gradle/wrapper
+      cat gradle/wrapper/gradle-wrapper.properties
+      sed -i 's/https\:\/\/services.gradle.org\/distributions\///g' input.txt
       cat gradle/wrapper/gradle-wrapper.properties
       ./gradlew wrapper --gradle-distribution-url=gradle-7.3.1-bin.zip
       ./gradlew linkReleaseExecutableLinuxX64
