--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -46,7 +46,7 @@ parts:
       ls
       ls gradle/wrapper
       cat gradle/wrapper/gradle-wrapper.properties
-      sed -i 's/https\:\/\/services.gradle.org\/distributions\///g' input.txt
+      sed -i 's/https\:\/\/services.gradle.org\/distributions\///g' gradle/wrapper/gradle-wrapper.properties
       cat gradle/wrapper/gradle-wrapper.properties
       ./gradlew wrapper --gradle-distribution-url=gradle-7.3.1-bin.zip
       ./gradlew linkReleaseExecutableLinuxX64
