--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -38,7 +38,6 @@ parts:
     override-pull: |
       snapcraftctl pull
       cp $SNAPCRAFT_STAGE/gradle-7.3.1-bin.zip $SNAPCRAFT_PART_SRC/gradle/wrapper/gradle-7.3.1-bin.zip
-      cp $SNAPCRAFT_STAGE/gradle-7.3.1-bin.zip $SNAPCRAFT_PART_SRC/gradle-7.3.1-bin.zip
     override-build: |
       snapcraftctl build
       java -version
@@ -46,7 +45,7 @@ parts:
       ls
       ls gradle/wrapper
       cat gradle/wrapper/gradle-wrapper.properties
-      sed -i 's/https\:\/\/services.gradle.org\/distributions\///g' gradle/wrapper/gradle-wrapper.properties
+      sed -i -e 's/https\\:\/\/services.gradle.org\/distributions\///' gradle/wrapper/gradle-wrapper.properties
       cat gradle/wrapper/gradle-wrapper.properties
       ./gradlew wrapper --gradle-distribution-url=gradle-7.3.1-bin.zip
       ./gradlew linkReleaseExecutableLinuxX64
