--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -43,8 +43,7 @@ parts:
       cp $SNAPCRAFT_STAGE/gradle-7.3.1-bin.zip $SNAPCRAFT_PART_SRC/gradle/wrapper/gradle-7.3.1-bin.zip
       mkdir $SNAPCRAFT_PART_SRC/libs
       cp $SNAPCRAFT_STAGE/kotlin-gradle-plugin-1.5.31.jar $SNAPCRAFT_PART_SRC/libs/kotlin-gradle-plugin-1.5.31.jar
-    override-
-    : |
+    override-build: |
       snapcraftctl build
       java -version
       pwd
