--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -20,6 +20,6 @@ parts:
     override-pull: |
       snapcraftctl pull
       wget https://files.pkg.jetbrains.space/public/p/ktor-cli-tool/linux-release/ktor-cli-generator.kexe
-    override-install: |
+    override-stage: |
       snapcraftctl install
-      cp ktor-cli-generator.kexe $SNAPCRAFT_PART_INSTALL/ktor
+      cp ktor-cli-generator.kexe $SNAPCRAFT_PART_STAGE/ktor
