--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -22,8 +22,8 @@ parts:
       - libcurl4-gnutls-dev
     override-pull: |
       snapcraftctl pull
-      wget https://files.pkg.jetbrains.space/public/p/ktor-cli-tool/linux-release/ktor-cli-generator.kexe
-      cp ktor-cli-generator.kexe $SNAPCRAFT_PART_SRC/ktor
+      wget https://files.pkg.jetbrains.space/public/p/ktor-cli-tool/linux-release/ktor-cli-generator-2.kexe
+      cp ktor-cli-generator-2.kexe $SNAPCRAFT_PART_SRC/ktor
     override-build: |
       snapcraftctl build
       chmod +x ktor
